# omneval

./: .dockerignore  .gitignore  CLAUDE.md  CODEOWNERS  CONTEXT.md  Dockerfile  README.md  ROADMAP.md  go.work  go.work.sum  lantern-prd.md  omneval-prd.md  package-lock.json  package.json  plan-output.json  qa_test_traces.py  qa_trace_test.py  qa_validation.py  sandcastle-branches.json  sandcastle-plan.json  test_traces.py
.claude/: qa_validator.md  qa_validator_ui.md  settings.local.json
.devloop/: CODING_STANDARDS.md  config.yaml
.devloop/prompts/: implement.md  plan.md  review.md
.github/workflows/: ci.yml  release.yml
.lantern-sandcastle/: plan.json
.sandcastle/: .env.example  .gitignore  CODING_STANDARDS.md  Dockerfile  implement-prompt.md  main.mts  merge-prompt.md  pi-models.json  plan-prompt.md  plan.json  review-prompt.md
.sentrux/: rules.toml
benchmark/: README.md  config.go  go.mod  harness.go  harness_test.go  ingest.go  latency.go  latency_test.go  query_latency.go  query_latency_config.go  query_latency_doc_test.go  query_latency_test.go  results.go  results_test.go  workload.go  workload_test.go  writer.go  writer_test.go
benchmark/env/: README.md  deploy_benchmark.sh  teardown_benchmark.sh  validate_benchmark.sh  values-benchmark.yaml
deploy/docker-compose/: .env.example  README.md  docker-compose.yml
deploy/helm/: Chart.yaml  README.md  values.yaml
deploy/kustomize/: README.md
docs/: architecture.md  ingestion.md  restore-from-snapshot.md  root-cause-issue-336.md  ui-ux-gap-analysis.md
docs/adr/: 0001-writer-statefulset-pvc.md  0002-score-partition-by-span-date.md  0003-otlp-translation-in-ingest-api.md  0004-ducklake-storage-core.md  0005-quack-server-as-lake-gateway.md  0006-duckdb-native-catalog-as-default.md  0007-catalog-backup-is-operator-responsibility.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/benchmarks/: ingest-throughput-and-latency.md
docs/runbooks/: catalog-cutover.md  catalog-rebuild-from-parquet.md
internal/: go.mod  go.sum
internal/auth/: auth.go  auth_test.go  context_keys.go  middleware.go  resolver.go
patches/: @ai-hero+sandcastle+0.5.7.patch
scripts/: qa_validation.py  test_qa_dataset_shapes.py
sdk/go/: go.mod  (+1 more)
sdk/python/: README.md  pyproject.toml
sdk/python/lantern_sdk/: __init__.py  client.py  exporter.py  trace.py
sdk/python/omneval_sdk/: __init__.py  client.py  exporter.py  trace.py
sdk/python/tests/: test_client.py  test_package_metadata.py  test_top_level_exports.py  test_trace.py
ui/: BRANDING.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
(+484 files in other folders)
