[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lantern-sdk"
version = "0.1.0"
description = "Python SDK for Lantern LLM tracing"
requires-python = ">=3.9"
dependencies = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "responses"]
