[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omneval-sdk"
version = "0.2.0"
description = "Python SDK for Omneval LLM tracing"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Omneval Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.9"
dependencies = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "responses"]
